--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
+    "mapbox-gl": "^1.13.2",
     "next": "12.1.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-chartjs-2": "^4.1.0",
+    "react-dom": "18.1.0",
+    "react-map-gl": "^7.0.15",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "eslint": "8.14.0",
